# Snake-Engine

./: CMakeLists.txt  README.md
cmake/: FindRapidXML.cmake
demo/: component.hpp  identifiers.hpp  inputhandler.cpp  inputhandler.hpp  main.cpp  rotation.cpp  rotation.hpp  ship.cpp  ship.hpp  turret.cpp  turret.hpp
inc/: exception.hpp  game.hpp  handle.hpp  handle.inl  identifiers.hpp  resourcemanager.hpp  resourcemanager.inl  shader.hpp  texture.hpp  texturemanager.hpp  timer.hpp  vector.hpp  vector.inl
inc/error/: glewexception.hpp  glexception.hpp  sdlexception.hpp
inc/maths/: transform.hpp  vector.hpp
inc/scene/: component.hpp  componentmanager.hpp  node.hpp  nodemanager.hpp  scene.hpp  scenemanager.hpp
inc/scene/component/: component.hpp  componentfactory.hpp  componentmanager.hpp  componentpointer.hpp
inc/scene/input/: command.hpp  commandqueue.hpp  ihandlerfactory.hpp  inputhandler.hpp
inc/scene/node/: node.hpp  nodefactory.hpp  nodemanager.hpp
inc/shader/: basic.hpp  shader.hpp
inc/snk/: context.hpp  game.hpp  identifiers.hpp  timer.hpp
inc/snk/component/: component.hpp  componentfactory.hpp  componentmanager.hpp  componentpointer.hpp
inc/snk/error/: glewexception.hpp  glexception.hpp  sdlexception.hpp  snkexception.hpp
inc/snk/input/: command.hpp  commandqueue.hpp  ihandlerfactory.hpp  inputhandler.hpp
inc/snk/maths/: transform.hpp  vector.hpp  vector.inl
inc/snk/node/: node.hpp  nodedata.hpp  nodefactory.hpp  nodemanager.hpp
inc/snk/resource/: handle.hpp  resource.hpp  resourcemanager.hpp  resourcemanager.inl
inc/snk/scene/: scene.hpp  scenedata.hpp  scenemanager.hpp
inc/snk/shader/: basic.hpp  shader.hpp
inc/snk/texture/: texture.hpp  texturemanager.hpp
res/shader/: snake.glfs  snake.glvs
res/texture/: ship.xml  texture.xml
src/: exception.cpp  game.cpp  handle.cpp  main.cpp  shader.cpp  texture.cpp  texturemanager.cpp  timer.cpp
src/component/: component.cpp  componentfactory.cpp  componentmanager.cpp  componentpointer.cpp
src/error/: glewexception.cpp  glexception.cpp  sdlexception.cpp  snkexception.cpp
src/input/: command.cpp  commandqueue.cpp  ihandlerfactory.cpp
src/maths/: transform.cpp
src/node/: node.cpp  nodefactory.cpp  nodemanager.cpp
src/scene/: node.cpp  nodemanager.cpp  scene.cpp  scenemanager.cpp
src/scene/component/: component.cpp  componentfactory.cpp  componentmanager.cpp  componentpointer.cpp
src/scene/input/: commmand.cpp  commmandqueue.cpp  ihandlerfactory.cpp
src/scene/node/: node.cpp  nodefactory.cpp  nodemanager.cpp
src/shader/: basic.cpp  shader.cpp
src/texture/: texture.cpp  texturemanager.cpp
test/: main.cpp  testmain.cpp  testresourcemanager.cpp  testtransform.cpp  testvector.cpp
